src/test/deca/extension/codegen/invalid/test_allocation_tres_grande.deca
// Description:
// Test une allocation trés grande 
// Resultats:
//  Le resulat attendu est dans le fichier avec "ce_nom"_output_expected au le dossier ./result
// Historique:
//    cree le 01/01/2023


{
    int[][] x = new int[2000000][20000000]; 

}